# job_scraper

./: .dockerignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
api/: filters.py  serializers.py  tests.py  urls.py  views.py
dashboard/: urls.py  views.py
dashboard/templates/: base.html
dashboard/templates/dashboard/: index.html  insights.html  jobs.html  orchestrate.html  quality.html  system.html
docs/: api.md  scraper.md
job_scraper/: asgi.py  settings.py  urls.py  wsgi.py
scraper/: decorators.py  models.py  orchestrator.py
scraper/management/commands/: orchestrate.py  process_jobs.py  test_indeed.py  test_linkedin.py
scraper/migrations/: 0001_initial.py
scraper/pipeline/: cleaner.py  duplicate_detector.py  normalizer.py  processor.py
scraper/scrapers/: base.py  indeed.py  linkedin.py
