[project]
name = "job-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.1",
    "pandas>=2.3.2",
    "selenium>=4.35.0",
    "selenium-stealth>=1.0.6",
    "webdriver-manager>=4.0.2",
]
