[project]
name = "job-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "django>=5.2.6",
    "django-environ>=0.12.0",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "drf-spectacular[sidecar]>=0.28.0",
    "gunicorn>=23.0.0",
    "pandas>=2.3.2",
    "selenium>=4.35.0",
    "selenium-stealth>=1.0.6",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
